--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,19 @@
     "name": "iikiti/cms",
     "version": "0.1",
     "type": "project",
-    "license": "proprietary",
+    "license": "Apache",
     "description": "",
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "repositories": [],
+    "repositories": [
+        {
+            "type": "path",
+            "url": "C:/srv/lib/iikiti/extension-utilities",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
@@ -18,6 +26,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "iikiti/extension-utilities": "^0.0.1",
         "martin-georgiev/postgresql-for-doctrine": "^1.6",
         "masterminds/html5": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.3",
