Changed doctrine to use attributes instead of annotations

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -38,7 +38,7 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                type: annotation
+                type: attribute
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'iikiti\CMS\Entity'
                 alias: App
