Added extension utilities

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
         "iikiti/components": "^0.1.0",
+        "iikiti/extension-utilities": "^0.0.1",
         "martin-georgiev/postgresql-for-doctrine": "^1.6",
         "masterminds/html5": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.3",
