--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "symfony/process": "^6.1",
         "symfony/property-access": "^6.1",
         "symfony/property-info": "^6.1",
+        "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "^6.1",
         "symfony/serializer": "^6.1",
