--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,7 @@
         "symfony/stopwatch": "^6.1",
         "symfony/var-dumper": "^6.1",
         "symfony/web-profiler-bundle": "^6.1",
-        "vimeo/psalm": "5.0.0-beta1"
+        "vimeo/psalm": "^5.0"
     },
     "config": {
         "optimize-autoloader": true,
