--- a/composer.json
+++ b/composer.json
@@ -41,48 +41,48 @@
         "scienta/doctrine-json-functions": "~4.4",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "^6.1",
-        "symfony/console": "^6.1",
-        "symfony/dom-crawler": "^6.1",
-        "symfony/dotenv": "^6.1",
-        "symfony/expression-language": "^6.1",
+        "symfony/asset": "^6.2",
+        "symfony/console": "^6.2",
+        "symfony/dom-crawler": "^6.2",
+        "symfony/dotenv": "^6.2",
+        "symfony/expression-language": "^6.2",
         "symfony/flex": "^2",
-        "symfony/form": "^6.1",
-        "symfony/framework-bundle": "^6.1",
-        "symfony/http-client": "^6.1",
-        "symfony/intl": "^6.1",
-        "symfony/mailer": "^6.1",
-        "symfony/mime": "^6.1",
+        "symfony/form": "^6.2",
+        "symfony/framework-bundle": "^6.2",
+        "symfony/http-client": "^6.2",
+        "symfony/intl": "^6.2",
+        "symfony/mailer": "^6.2",
+        "symfony/mime": "^6.2",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "^6.1",
-        "symfony/process": "^6.1",
-        "symfony/property-access": "^6.1",
-        "symfony/property-info": "^6.1",
-        "symfony/proxy-manager-bridge": "6.1.*",
-        "symfony/runtime": "6.1.*",
-        "symfony/security-bundle": "^6.1",
-        "symfony/serializer": "^6.1",
-        "symfony/string": "^6.1",
-        "symfony/translation": "^6.1",
-        "symfony/twig-bundle": "^6.1",
-        "symfony/validator": "^6.1",
-        "symfony/web-link": "^6.1",
+        "symfony/notifier": "^6.2",
+        "symfony/process": "^6.2",
+        "symfony/property-access": "^6.2",
+        "symfony/property-info": "^6.2",
+        "symfony/proxy-manager-bridge": "^6.2",
+        "symfony/runtime": "^6.2",
+        "symfony/security-bundle": "^6.2",
+        "symfony/serializer": "^6.2",
+        "symfony/string": "^6.2",
+        "symfony/translation": "^6.2",
+        "symfony/twig-bundle": "^6.2",
+        "symfony/validator": "^6.2",
+        "symfony/web-link": "^6.2",
         "symfony/webpack-encore-bundle": "^1.13",
-        "symfony/yaml": "^6.1",
+        "symfony/yaml": "^6.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "1.4",
+        "phpstan/phpstan": "1.9",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^6.1",
-        "symfony/css-selector": "^6.1",
-        "symfony/debug-bundle": "^6.1",
+        "symfony/browser-kit": "^6.2",
+        "symfony/css-selector": "^6.2",
+        "symfony/debug-bundle": "^6.2",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^6.1",
-        "symfony/stopwatch": "^6.1",
-        "symfony/var-dumper": "^6.1",
-        "symfony/web-profiler-bundle": "^6.1",
+        "symfony/phpunit-bridge": "^6.2",
+        "symfony/stopwatch": "^6.2",
+        "symfony/var-dumper": "^6.2",
+        "symfony/web-profiler-bundle": "^6.2",
         "vimeo/psalm": "^5.0"
     },
     "config": {
@@ -130,7 +130,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.1.*",
+            "require": "6.2.*",
             "docker": false
         }
     }
