--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-xml": "*",
-        "doctrine/annotations": "^1.0",
+        "doctrine/annotations": "^1.0 || ^2.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
