- Switching to using ivopetkov/html5-dom-document-php

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "doctrine/orm": "^2.13",
         "iikiti/components": "^0.1.0",
         "iikiti/extension-utilities": "^0.0.1",
-        "masterminds/html5": "^2.7",
+        "ivopetkov/html5-dom-document-php": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "scienta/doctrine-json-functions": "~4.4",
         "symfony/apache-pack": "^1.0",
