--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-        "@babel/preset-react": "^7.0.0",
-        "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/webpack-encore": "^2.1.0",
+        "@babel/preset-react": "^7.16.0",
+        "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4",
         "cash-dom": "^8.1",
         "copy-webpack-plugin": "^10.1.0",
@@ -14,13 +14,13 @@
         "postcss-loader": "^7.0",
         "purgecss-webpack-plugin": "^5.0",
         "regenerator-runtime": "^0.13.2",
-        "sass": "^1.17.0",
-        "sass-loader": "^12.0.0",
+        "sass": "^1.68.0",
+        "sass-loader": "^13.3.2",
         "stimulus": "^3.0.1",
         "tailwindcss": "^3.2",
         "webpack-notifier": "^1.6"
     },
-    "license": "UNLICENSED",
+    "license": "Apache-2.0",
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
@@ -32,6 +32,7 @@
         "defaults"
     ],
     "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
         "prop-types": "^15.8.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0"
