- Removed ObjectTypeFilter in favor of mapping

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,6 +10,7 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        report_fields_where_declared: true
         mappings:
             App:
                 is_bundle: false
@@ -26,4 +27,3 @@ doctrine:
 
         filters:
             SiteFilter: iikiti\CMS\Doctrine\SiteFilter
-            ObjectTypeFilter: iikiti\CMS\Doctrine\ObjectTypeFilter
