--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/persistence": "^3.1",
         "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-doctrine": "*",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^6.3",
         "symfony/css-selector": "^6.3",
