--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "purgecss-webpack-plugin": "^5.0",
         "sass": "^1.68.0",
         "sass-loader": "^13.3.2",
+        "svelte": "^4.2.1",
+        "svelte-loader": "^3.1.9",
+        "svelte-routing": "^2.4.0",
         "tailwindcss": "^3.3.3",
         "webpack-notifier": "^1.15"
     },
