- added spelling and ignored words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
 	"cSpell.words": [
+		"corejs",
 		"dtype"
 	],
 	"cSpell.ignoreWords": [
 		"IvoPetkov",
+		"Providej",
 		"scienta",
 		"weirdan"
 	]
