--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-error.log
 ###< iikiti ###
 
 ### VS CODE ###
-.vscode
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
