- Fixed not being able to use a custom property

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,10 +1,9 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        app_user_provider:
+        user:
             entity:
                 class: iikiti\CMS\Entity\Object\User
-                property: username
     password_hashers:
         iikiti\CMS\Entity\Object\User:
             algorithm: auto
