- Working on getting an automated subquery to work

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -26,3 +26,5 @@ doctrine:
                 
 
         filters:
+          PropertySqlFilter:
+            class: iikiti\CMS\Filters\PropertySqlFilter
