- Added usage of view to restrict properties to latest

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -26,5 +26,5 @@ doctrine:
                 
 
         filters:
-          PropertySqlFilter:
-            class: iikiti\CMS\Filters\PropertySqlFilter
+          ObjectPropertyFilter:
+            class: iikiti\CMS\Filters\LatestObjectPropertyFilter
