- Added scheb multi-factor authentication bundle

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,12 @@
         "iikiti/extension-utilities": "^0.0.1",
         "ivopetkov/html5-dom-document-php": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "scheb/2fa-backup-code": "^6.9",
+        "scheb/2fa-bundle": "^6.9",
+        "scheb/2fa-email": "^6.9",
+        "scheb/2fa-google-authenticator": "^6.9",
+        "scheb/2fa-totp": "^6.9",
+        "scheb/2fa-trusted-device": "^6.9",
         "scienta/doctrine-json-functions": "^5.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^6.3",
