--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
         "symfony/validator": "^6.3",
         "symfony/web-link": "^6.3",
         "symfony/webpack-encore-bundle": "^2.1",
+        "symfony/workflow": "6.3",
         "symfony/yaml": "^6.3",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
