--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,8 +14,9 @@ security:
         main:
             lazy: true
             two_factor:
-                auth_form_path: login/mfa    # The route name you have used in the routes.yaml
-                check_path: login/mfa/check  # The route name you have used in the routes.yaml
+                auth_form_path: mfa_login    # The route name you have used in the routes.yaml
+                check_path: mfa_login_check  # The route name you have used in the routes.yaml
+                multi_factor: false
             form_login:
                 check_path: /login
                 failure_path: /login
@@ -37,8 +38,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/logout, roles: ROLE_USER }
         - { path: ^/login/mfa, roles: IS_AUTHENTICATED_2FA_IN_PROGRESS }
         - { path: ^/login/mfa/check, roles: IS_AUTHENTICATED_2FA_IN_PROGRESS }
-        - { path: ^/logout, roles: ROLE_USER }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: PUBLIC_ACCESS }
