--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,8 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    access_decision_manager:
+        strategy: unanimous
+        allow_if_all_abstain: false
     providers:
         user:
             entity:
@@ -22,6 +25,7 @@ security:
                 failure_path: /login
                 login_path: /login
                 enable_csrf: true
+                default_target_path: html_login
             # configure the form authentication as the entry point for unauthenticated users
             entry_point: form_login
             logout:
@@ -34,10 +38,14 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/logout, roles: ROLE_USER }
+        - { path: ^/logout, roles: IS_AUTHENTICATED }
+        - { path: ^/login/mfa, roles: IS_MFA_IN_PROGRESS }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: PUBLIC_ACCESS }
