- Added new ignore words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
 	"cSpell.words": [
+		"Autoconfigure",
 		"corejs",
 		"dtype",
 		"lexbor",
-		"NOBLANKS"
+		"NOBLANKS",
+		"Scheb"
 	],
 	"cSpell.ignoreWords": [
 		"IvoPetkov",
