--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@babel/plugin-proposal-class-properties": "^7.18",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/ux-svelte": "file:vendor/symfony/ux-svelte/assets",
         "@symfony/webpack-encore": "^4.4",
         "autoprefixer": "^10.4",
         "cash-dom": "^8.1",
@@ -14,6 +15,8 @@
         "purgecss-webpack-plugin": "^5.0",
         "sass": "^1.68.0",
         "sass-loader": "^13.3.2",
+        "svelte": "^3.0 || ^4.0",
+        "svelte-loader": "^3.1.9",
         "tailwindcss": "^3.3.3",
         "webpack-notifier": "^1.15"
     },
