--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,6 +7,7 @@ doctrine:
         #server_version: '5.7'
 
     orm:
+        enable_lazy_ghost_objects: true
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
