--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.18",
+        "@babel/core": "^7.23.3",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/preset-env": "^7.23.3",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-svelte": "file:vendor/symfony/ux-svelte/assets",
