--- a/composer.json
+++ b/composer.json
@@ -29,45 +29,46 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-xml": "*",
-        "doctrine/annotations": "^1.0 || ^2.0",
+        "doctrine/annotations": "*",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
+		"phpstan/phpdoc-parser": "^1.24",
         "ivopetkov/html5-dom-document-php": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "scienta/doctrine-json-functions": "^5.3",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "^6.3",
-        "symfony/console": "^6.3",
-        "symfony/dom-crawler": "^6.3",
-        "symfony/dotenv": "^6.3",
-        "symfony/expression-language": "^6.3",
+        "symfony/asset": "^7.0",
+        "symfony/console": "^7.0",
+		"symfony/doctrine-messenger": "7.0.*",
+        "symfony/dom-crawler": "^7.0",
+        "symfony/dotenv": "^7.0",
+        "symfony/expression-language": "^7.0",
         "symfony/flex": "^2",
-        "symfony/form": "^6.3",
-        "symfony/framework-bundle": "^6.3",
-        "symfony/http-client": "^6.3",
-        "symfony/intl": "^6.3",
-        "symfony/mailer": "^6.3",
-        "symfony/mime": "^6.3",
+        "symfony/form": "^7.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/http-client": "^7.0",
+        "symfony/intl": "^7.0",
+        "symfony/mailer": "^7.0",
+        "symfony/mime": "^7.0",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "^6.3",
-        "symfony/process": "^6.3",
-        "symfony/property-access": "^6.3",
-        "symfony/property-info": "^6.3",
-        "symfony/proxy-manager-bridge": "^6.3",
-        "symfony/runtime": "^6.3",
-        "symfony/security-bundle": "^6.3",
-        "symfony/serializer": "^6.3",
+        "symfony/notifier": "^7.0",
+        "symfony/process": "^7.0",
+        "symfony/property-access": "^7.0",
+        "symfony/property-info": "^7.0",
+        "symfony/runtime": "^7.0",
+        "symfony/security-bundle": "^7.0",
+        "symfony/serializer": "^7.0",
         "symfony/stimulus-bundle": "^2.13",
-        "symfony/string": "^6.3",
-        "symfony/translation": "^6.3",
-        "symfony/twig-bundle": "^6.3",
+        "symfony/string": "^7.0",
+        "symfony/translation": "^7.0",
+        "symfony/twig-bundle": "^7.0",
         "symfony/ux-svelte": "^2.13",
-        "symfony/validator": "^6.3",
-        "symfony/web-link": "^6.3",
+        "symfony/validator": "^7.0",
+        "symfony/web-link": "^7.0",
         "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/workflow": "6.3",
-        "symfony/yaml": "^6.3",
+        "symfony/workflow": "^7.0",
+        "symfony/yaml": "^7.0",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -78,14 +79,14 @@
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-doctrine": "*",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^6.3",
-        "symfony/css-selector": "^6.3",
-        "symfony/debug-bundle": "^6.3",
+        "symfony/browser-kit": "^7.0",
+        "symfony/css-selector": "^7.0",
+        "symfony/debug-bundle": "^7.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^6.3",
-        "symfony/stopwatch": "^6.3",
-        "symfony/var-dumper": "^6.3",
-        "symfony/web-profiler-bundle": "^6.3",
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/stopwatch": "^7.0",
+        "symfony/var-dumper": "^7.0",
+        "symfony/web-profiler-bundle": "^7.0",
         "vimeo/psalm": "^5.2",
         "weirdan/doctrine-psalm-plugin": "^2.9"
     },
@@ -114,7 +115,12 @@
     "replace": {
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php80": "*"
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*"
     },
     "scripts": {
         "auto-scripts": {
