--- a/composer.json
+++ b/composer.json
@@ -30,21 +30,28 @@
         "ext-intl": "*",
         "ext-xml": "*",
         "doctrine/annotations": "*",
+        "doctrine/annotations": "*",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
+		"phpstan/phpdoc-parser": "^1.24",
         "ivopetkov/html5-dom-document-php": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "scienta/doctrine-json-functions": "^5.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^7.0",
         "symfony/console": "^7.0",
-        "symfony/dependency-injection": "7.0.*",
-        "symfony/doctrine-messenger": "7.0.*",
+		"symfony/doctrine-messenger": "7.0.*",
         "symfony/dom-crawler": "^7.0",
         "symfony/dotenv": "^7.0",
         "symfony/expression-language": "^7.0",
         "symfony/flex": "^2",
+        "symfony/form": "^7.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/http-client": "^7.0",
+        "symfony/intl": "^7.0",
+        "symfony/mailer": "^7.0",
+        "symfony/mime": "^7.0",
         "symfony/form": "^7.0",
         "symfony/framework-bundle": "^7.0",
         "symfony/http-client": "^7.0",
@@ -59,14 +66,28 @@
         "symfony/runtime": "^7.0",
         "symfony/security-bundle": "^7.0",
         "symfony/serializer": "^7.0",
+        "symfony/notifier": "^7.0",
+        "symfony/process": "^7.0",
+        "symfony/property-access": "^7.0",
+        "symfony/property-info": "^7.0",
+        "symfony/runtime": "^7.0",
+        "symfony/security-bundle": "^7.0",
+        "symfony/serializer": "^7.0",
         "symfony/stimulus-bundle": "^2.13",
+        "symfony/string": "^7.0",
+        "symfony/translation": "^7.0",
+        "symfony/twig-bundle": "^7.0",
         "symfony/string": "^7.0",
         "symfony/translation": "^7.0",
         "symfony/twig-bundle": "^7.0",
         "symfony/ux-svelte": "^2.13",
         "symfony/validator": "^7.0",
         "symfony/web-link": "^7.0",
+        "symfony/validator": "^7.0",
+        "symfony/web-link": "^7.0",
         "symfony/webpack-encore-bundle": "^2.1",
+        "symfony/workflow": "^7.0",
+        "symfony/yaml": "^7.0",
         "symfony/workflow": "^7.0",
         "symfony/yaml": "^7.0",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -82,7 +103,14 @@
         "symfony/browser-kit": "^7.0",
         "symfony/css-selector": "^7.0",
         "symfony/debug-bundle": "^7.0",
+        "symfony/browser-kit": "^7.0",
+        "symfony/css-selector": "^7.0",
+        "symfony/debug-bundle": "^7.0",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/stopwatch": "^7.0",
+        "symfony/var-dumper": "^7.0",
+        "symfony/web-profiler-bundle": "^7.0",
         "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "^7.0",
         "symfony/var-dumper": "^7.0",
@@ -115,6 +143,12 @@
     "replace": {
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*"
         "symfony/polyfill-php72": "*",
         "symfony/polyfill-php73": "*",
         "symfony/polyfill-php74": "*",
