--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,15 +23,15 @@ security:
             #    check_path: mfa_login_check  # The route name you have used in the routes.yaml
             #    multi_factor: false
             form_login:
-                check_path: /login
-                failure_path: /login
-                login_path: /login
+                check_path: html_login
+                failure_path: html_login
+                login_path: html_login
                 enable_csrf: true
                 default_target_path: html_login
             # configure the form authentication as the entry point for unauthenticated users
             entry_point: form_login
             logout:
-                path: /logout
+                path: html_logout
                 target: /
                 enable_csrf: true
 
