--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
         "friendsofphp/php-cs-fixer": "^3.38",
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-doctrine": "*",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "^7.0",
         "symfony/css-selector": "^7.0",
         "symfony/debug-bundle": "^7.0",
@@ -141,7 +141,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+		"test": [
+            "phpunit"
+		]
     },
     "conflict": {
         "symfony/symfony": "*"
