--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,7 @@
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-doctrine": "*",
         "phpunit/phpunit": "^9.6",
+        "psalm/attributes": "*",
         "psalm/plugin-symfony": "^5.1",
         "symfony/browser-kit": "^7.0",
         "symfony/css-selector": "^7.0",
