- Updated for changes to mfa bundle

--- a/config/packages/iikiti_mfabundle.yaml
+++ b/config/packages/iikiti_mfabundle.yaml
@@ -1,2 +1,2 @@
 iikiti_multifactor_authentication:
-  site_repository: iikiti\CMS\Repository\Object\SiteRepository
+  site_entity: iikiti\CMS\Entity\Object\Site
