--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.23.3",
+        "@babel/core": "^7.25.9",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/preset-env": "^7.23.3",
-        "@hotwired/stimulus": "^3.0.0",
-        "@symfony/stimulus-bridge": "^3.2.0",
+        "@babel/preset-env": "^7.25.9",
+        "@hotwired/stimulus": "^3.2.2",
+        "@symfony/stimulus-bridge": "^3.2.2",
         "@symfony/ux-svelte": "file:vendor/symfony/ux-svelte/assets",
-        "@symfony/webpack-encore": "^4.4",
-        "autoprefixer": "^10.4",
-        "cash-dom": "^8.1",
-        "copy-webpack-plugin": "^10.1.0",
-        "file-loader": "^6.2",
-        "postcss": "^8.4",
-        "postcss-import": "^14.0",
-        "postcss-loader": "^7.0",
-        "purgecss-webpack-plugin": "^5.0",
-        "sass": "^1.68.0",
-        "sass-loader": "^13.3.2",
-        "svelte": "^3.0 || ^4.0",
-        "svelte-loader": "^3.1.9",
-        "tailwindcss": "^3.3.3",
-        "webpack-notifier": "^1.15"
+        "@symfony/webpack-encore": "^4.7.0",
+        "autoprefixer": "^10.4.20",
+        "cash-dom": "^8.1.5",
+        "copy-webpack-plugin": "^10.2.4",
+        "file-loader": "^6.2.0",
+        "postcss": "^8.4.47",
+        "postcss-import": "^14.1.0",
+        "postcss-loader": "^7.3.4",
+        "purgecss-webpack-plugin": "^5.0.0",
+        "sass": "^1.80.4",
+        "sass-loader": "^13.3.3",
+        "svelte": "^4.2.19",
+        "svelte-loader": "^3.2.4",
+        "tailwindcss": "^3.4.14",
+        "webpack-notifier": "^1.15.0"
     },
     "license": "Apache-2.0",
     "private": true,
