--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.25.9",
+        "@babel/core": "^7.26.0",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/preset-env": "^7.25.9",
+        "@babel/preset-env": "^7.26.0",
         "@hotwired/stimulus": "^3.2.2",
         "@symfony/stimulus-bridge": "^3.2.2",
         "@symfony/ux-svelte": "file:vendor/symfony/ux-svelte/assets",
@@ -17,7 +17,7 @@
         "purgecss-webpack-plugin": "^5.0.0",
         "sass": "^1.80.4",
         "sass-loader": "^13.3.3",
-        "svelte": "^4.2.19",
+        "svelte": "^4 || ^5.1.2",
         "svelte-loader": "^3.2.4",
         "tailwindcss": "^3.4.14",
         "webpack-notifier": "^1.15.0"
