--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /public/bundles/
 /var/
 /vendor/
+/assets/vendor/
 ###< symfony/framework-bundle ###
 ###> symfony/phpunit-bridge ###
 .phpunit.result.cache
