- Removed symfony stimulus/ui/ux packages - Fixed deprecation warnings - Upgraded to svelte 5

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
         "@babel/preset-env": "^7.26.0",
         "@hotwired/stimulus": "^3.2.2",
         "@symfony/stimulus-bridge": "^3.2.2",
-        "@symfony/ux-svelte": "file:vendor/symfony/ux-svelte/assets",
         "@symfony/webpack-encore": "^4.7.0",
         "autoprefixer": "^10.4.20",
         "cash-dom": "^8.1.5",
@@ -15,10 +14,10 @@
         "postcss-import": "^14.1.0",
         "postcss-loader": "^7.3.4",
         "purgecss-webpack-plugin": "^5.0.0",
-        "sass": "^1.80.4",
-        "sass-loader": "^13.3.3",
-        "svelte": "^4 || ^5.1.2",
-        "svelte-loader": "^3.2.4",
+        "sass": "^1.83",
+        "sass-loader": "^14.0.0",
+        "svelte": "^5.17",
+        "svelte-loader": "^3.2",
         "tailwindcss": "^3.4.14",
         "webpack-notifier": "^1.15.0"
     },
