--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,7 +10,8 @@ doctrine:
         enable_lazy_ghost_objects: true
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
+        controller_resolver:
+            auto_mapping: false
         report_fields_where_declared: true
         mappings:
             App:
