--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@hotwired/stimulus": "^3.2.2",
         "@symfony/stimulus-bridge": "^3.2.2",
         "@symfony/webpack-encore": "^4.7.0",
+        "@tailwindcss/postcss": "^4.0.0",
         "autoprefixer": "^10.4.20",
         "cash-dom": "^8.1.5",
         "copy-webpack-plugin": "^10.2.4",
@@ -18,7 +19,7 @@
         "sass-loader": "^14.0.0",
         "svelte": "^5.17",
         "svelte-loader": "^3.2",
-        "tailwindcss": "^3.4.14",
+        "tailwindcss": "^4.0",
         "webpack-notifier": "^1.15.0"
     },
     "license": "Apache-2.0",
