- Added SchemaListener service to dynamically set a schema if not set/hardcoded in the entity's table definition (required to be an environment variable).

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,9 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
+    # Manually configure the SchemaListener to bind the schema parameter.
+    # The #[AsDoctrineListener] attribute handles the autoconfiguration (tagging).
+    # We only need to define the service here to bind the constructor argument.
+    iikiti\CMS\Doctrine\SchemaListener:
+        bind:
+            $schema: '%env(DB_SCHEMA)%'
