--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -14,12 +14,12 @@ doctrine:
             auto_mapping: false
         report_fields_where_declared: true
         mappings:
-            App:
+            iikiti:
                 is_bundle: false
                 type: attribute
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'iikiti\CMS\Entity'
-                alias: App
+                alias: iikiti
         dql:
             string_functions:
               JSON_EXTRACT_PATH: Scienta\DoctrineJsonFunctions\Query\AST\Functions\Postgresql\JsonExtractPath
