--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,11 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api:
+            pattern: ^/api
+            stateless: true
+            custom_authenticators:
+                - iikiti\CMS\Security\ApiTokenAuthenticator
         main:
             custom_authenticators:
                 - iikiti\MfaBundle\Authentication\Authenticator
@@ -44,6 +49,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/admin, roles: IS_AUTHENTICATED }
         - { path: ^/logout, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS }
