--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "doctrine/persistence": "*",
         "friendsofphp/php-cs-fixer": "^3.75",
         "phpstan/phpstan": "^1.11",
-        "phpstan/phpstan-doctrine": "*",
+        "phpstan/phpstan-doctrine": "^1.5",
         "phpunit/phpunit": "^10.5",
         "psalm/attributes": "*",
         "psalm/plugin-symfony": "^5.2.7",
