- Added API Platform - Fixed PHPStan error

--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,20 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-xml": "*",
+        "api-platform/doctrine-orm": "^4.1",
+        "api-platform/graphql": "^4.1",
+        "api-platform/symfony": "^4.1",
         "doctrine/annotations": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "*",
+        "doctrine/orm": "^3.4",
         "iikiti/mfa": "master",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "scienta/doctrine-json-functions": "^6.3",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "7.3.*",
         "symfony/console": "^7.3",
         "symfony/dependency-injection": "^7.3",
         "symfony/doctrine-messenger": "^7.3",
@@ -62,8 +68,10 @@
         "doctrine/doctrine-fixtures-bundle": "*",
         "doctrine/persistence": "*",
         "friendsofphp/php-cs-fixer": "^3.75",
-        "phpstan/phpstan": "^1.11",
-        "phpstan/phpstan-doctrine": "^1.5",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^10.5",
         "psalm/attributes": "*",
         "psalm/plugin-symfony": "^5.2.7",
@@ -86,6 +94,7 @@
         "sort-packages": true,
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
+            "phpstan/extension-installer": true,
             "symfony/flex": true,
             "symfony/runtime": true
         }
