--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
         "phpunit/phpunit": "^10.5",
         "psalm/attributes": "*",
         "psalm/plugin-symfony": "^5.2.7",
+        "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "^7.3",
         "symfony/css-selector": "^7.3",
         "symfony/debug-bundle": "^7.3",
