--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -11,7 +11,7 @@ framework:
 
         routing:
             # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            # 'iikiti\CMS\Message\YourMessage': async
 
 # when@test:
 #    framework:
