--- a/composer.json
+++ b/composer.json
@@ -21,45 +21,45 @@
         "api-platform/doctrine-orm": "^4.1",
         "api-platform/graphql": "^4.1",
         "api-platform/symfony": "^4.1",
-        "doctrine/doctrine-bundle": "*",
-        "doctrine/doctrine-migrations-bundle": "*",
-        "doctrine/orm": "^3.4",
+        "doctrine/doctrine-bundle": "^3.2",
+        "doctrine/doctrine-migrations-bundle": "^4.0",
+        "doctrine/orm": "^3.6",
         "iikiti/mfa": "master",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "scienta/doctrine-json-functions": "^6.3",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "7.3.*",
-        "symfony/console": "^7.3",
-        "symfony/dependency-injection": "^7.3",
-        "symfony/doctrine-messenger": "^7.3",
-        "symfony/dom-crawler": "^7.3",
-        "symfony/dotenv": "^7.3",
-        "symfony/expression-language": "^7.3",
+        "symfony/asset": "^8.0",
+        "symfony/console": "^8.0",
+        "symfony/dependency-injection": "^8.0",
+        "symfony/doctrine-messenger": "^8.0",
+        "symfony/dom-crawler": "^8.0",
+        "symfony/dotenv": "^8.0",
+        "symfony/expression-language": "^8.0",
         "symfony/flex": "^2.4",
-        "symfony/form": "^7.3",
-        "symfony/framework-bundle": "^7.3",
-        "symfony/http-client": "^7.3",
-        "symfony/intl": "^7.3",
-        "symfony/mailer": "^7.3",
-        "symfony/mime": "^7.3",
-        "symfony/monolog-bundle": "^3.10",
-        "symfony/notifier": "^7.3",
-        "symfony/process": "^7.3",
-        "symfony/property-access": "^7.3",
-        "symfony/property-info": "^7.3",
-        "symfony/runtime": "^7.3",
-        "symfony/security-bundle": "^7.3",
-        "symfony/serializer": "^7.3",
-        "symfony/string": "^7.3",
-        "symfony/translation": "^7.3",
-        "symfony/twig-bundle": "^7.3",
-        "symfony/validator": "^7.3",
-        "symfony/web-link": "^7.3",
+        "symfony/form": "^8.0",
+        "symfony/framework-bundle": "^8.0",
+        "symfony/http-client": "^8.0",
+        "symfony/intl": "^8.0",
+        "symfony/mailer": "^8.0",
+        "symfony/mime": "^8.0",
+        "symfony/monolog-bundle": "^4.0",
+        "symfony/notifier": "^8.0",
+        "symfony/process": "^8.0",
+        "symfony/property-access": "^8.0",
+        "symfony/property-info": "^8.0",
+        "symfony/runtime": "^8.0",
+        "symfony/security-bundle": "^8.0",
+        "symfony/serializer": "^8.0",
+        "symfony/string": "^8.0",
+        "symfony/translation": "^8.0",
+        "symfony/twig-bundle": "^8.0",
+        "symfony/validator": "^8.0",
+        "symfony/web-link": "^8.0",
         "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/workflow": "^7.3",
-        "symfony/yaml": "^7.3",
+        "symfony/workflow": "^8.0",
+        "symfony/yaml": "^8.0",
         "twig/extra-bundle": "^2.12|^3.10",
         "twig/twig": "^2.12|^3.10"
     },
@@ -73,16 +73,15 @@
         "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^10.5",
         "psalm/attributes": "*",
-        "psalm/plugin-symfony": "^5.2.7",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "^7.3",
-        "symfony/css-selector": "^7.3",
-        "symfony/debug-bundle": "^7.3",
+        "symfony/browser-kit": "^8.0",
+        "symfony/css-selector": "^8.0",
+        "symfony/debug-bundle": "^8.0",
         "symfony/maker-bundle": "^1.59",
-        "symfony/phpunit-bridge": "^7.3",
-        "symfony/stopwatch": "^7.3",
-        "symfony/var-dumper": "^7.3",
-        "symfony/web-profiler-bundle": "^7.3",
+        "symfony/phpunit-bridge": "^8.0",
+        "symfony/stopwatch": "^8.0",
+        "symfony/var-dumper": "^8.0",
+        "symfony/web-profiler-bundle": "^8.0",
         "vimeo/psalm": "^6.0",
         "weirdan/doctrine-psalm-plugin": "^2.10"
     },
@@ -135,7 +134,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.3.*",
+            "require": "8.0.*",
             "docker": false
         }
     }
